--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        **Before** reporting an issue, make sure to read the [documentation](https://github.com/rose-pine/neovim) and search [existing issues](https://github.com/rose-pine/neovim/issues). Usage questions such as ***"How do I...?"*** belong in [Discussions](https://github.com/rose-pine/neovim/discussions) and will be closed.
+        **Before** reporting an issue, make sure to read the [documentation](https://github.com/alternight-theme/neovim) and search [existing issues](https://github.com/alternight-theme/neovim/issues). Usage questions such as ***"How do I...?"*** belong in [Discussions](https://github.com/alternight-theme/neovim/discussions) and will be closed.
   - type: input
     attributes:
       label: "Neovim version (nvim -v)"
@@ -16,7 +16,7 @@ body:
   - type: input
     attributes:
       label: "Terminal / multiplexer"
-      placeholder: "Kitty / tmux"
+      placeholder: "Warp / tmux"
     validations:
       required: true
   - type: textarea
@@ -33,7 +33,7 @@ body:
         vim.o.packpath = "/tmp/nvim/site"
 
         local plugins = {
-          rose_pine = "https://github.com/rose-pine/neovim",
+          alternight = "https://github.com/alternight-theme/neovim",
           -- ADD OTHER PLUGINS _NECESSARY_ TO REPRODUCE THE ISSUE
         }
 
@@ -44,11 +44,11 @@ body:
           end
         end
 
-        require("rose-pine").setup({
-          -- ADD ROSÉ PINE CONFIG THAT IS _NECESSARY_ TO REPRODUCE THE ISSUE
+        require("alternight").setup({
+          -- ADD ALTERNIGHT CONFIG THAT IS _NECESSARY_ TO REPRODUCE THE ISSUE
         })
 
-        vim.cmd("colorscheme rose-pine")
+        vim.cmd("colorscheme alternight")
       render: Lua
     validations:
       required: false
